[package]
name = "krb5-sys"
version = "0.1.2"
authors = ["skeleten <skele@ymail.com>"]

repository = "https://github.com/skeleten/krb5-sys"
description = "Bindings to the krb5 library, incomplete state"
license = "MIT"

[features]
default = []
krb5_old_crypto = []
krb5_deprecated = []

[dependencies]
