[package]
name = "krb5-sys"
version = "0.3.0"
authors = ["skeleten <skele@ymail.com>"]

repository = "https://github.com/skeleten/krb5-sys"
description = "Bindings to the krb5 library, incomplete state"
documentation = "https://docs.rs/krb5-sys"
license = "MIT"
categories = ["api-bindings"]

[features]
default = []
krb5_old_crypto = []
krb5_deprecated = []

[dependencies]
